force-app-unpackaged-objects/main/default/objects/Lead/fields/cUnite_Age__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Age__c</fullName>
    <formula>IF(ISNULL(cUnite_Birthdate__c),null,FLOOR((TODAY()-cUnite_Birthdate__c +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>