force-app-unpackaged-objects/main/default/objects/Lead/fields/cUnite_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>