force-app-unpackaged-objects/main/default/objects/Lead/fields/cUnite_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Electronic_Signature__c</fullName>
    <label>Electronic Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>