force-app-unpackaged-objects/main/default/objects/Lead/fields/cUnite_Electronic_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Electronic_Signature_Date__c</fullName>
    <label>Electronic Signature Date</label>
    <type>Date</type>
</CustomField>