force-app-unpackaged-objects/main/default/objects/Lead/fields/cUnite_Relationship__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Relationship__c</fullName>
    <description>The relationship field is used with the electronic signature fields. When an applicant is under 18, a parent/guardian must complete the waiver. The relationship is how the signer is related to the applicant.</description>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>